--- a/assets/css/ashwani.css
+++ b/assets/css/ashwani.css
@@ -387,6 +387,8 @@ h6, .h6 {
 }
 
 
+
+
 .lead {
   font-size: 1.25rem;
   font-weight: 300;
@@ -12077,7 +12079,7 @@ pre .code {
 .header .header-content .header-title .up {
   font-size: calc(30px + (60 - 30) * ((100vw - 300px) / (1300 - 300)));
   font-weight: 500;
-  color: #444;
+  
   margin-bottom: 5px;
   position: relative;
   display: block;
@@ -12087,7 +12089,7 @@ pre .code {
   font-size: calc(30px + (75 - 30) * ((100vw - 300px) / (1300 - 300)));
   margin-bottom: 0;
   position: relative;
-  display: block;
+  display: inline-block;
 }
 
 .header .header-content .header-subtitle {
@@ -12210,6 +12212,7 @@ pre .code {
 }
 
 .section-sm {
+  text-align: center;
   padding: 40px 0 !important;
 }
 
@@ -12220,3 +12223,62 @@ pre .code {
 .section-lg {
   padding: 100px 0 !important;
 }
+
+.logo-image {
+  width: 100px; /* Set the width to your desired size */
+  height: auto; /* Maintain the aspect ratio */
+  margin: 20px 0; /* Optional: Add margin for spacing */
+  display: block; /* Make the image a block element */
+  margin-left: auto; /* Center align the image horizontally */
+  margin-right: auto; /* Center align the image horizontally */
+}
+.scrolling-video {
+  display: inline-block;
+  width: 300px; /* Set to match the width of your images */
+  height: 250px; /* Set to match the height of your images */
+  object-fit: cover;
+  margin-right: 10px;  /* Optional: Add some space below the video */
+   /* Ensures video is a block element like images */
+}
+
+
+.scrolling-wrapper {
+  overflow: hidden;
+  white-space: nowrap;
+  width: 100%;
+}
+
+.scrolling-content {
+  display: inline-block;
+  animation: scroll 30s linear infinite;
+}
+
+.scrolling-content img {
+  display: inline-block;
+  width: 300px; /* Medium size for images */
+  height: 250px; /* Maintain a consistent height */
+  object-fit: cover; /* Ensure images maintain aspect ratio */
+  margin-right: 10px; /* Space between images */
+}
+
+@keyframes scroll {
+  0% {
+      transform: translateX(100%);
+  }
+  100% {
+      transform: translateX(-100%);
+  }
+}
+
+.android-logo {
+  width: 50px; /* Adjust the width as needed */
+  height: auto; /* Maintain aspect ratio */
+}
+/* Optional styling for the paragraph */
+.header-subtitle {
+  display: flex; /* Align items in a row */
+    align-items: center; /* Center items vertically */
+    margin: 10px; /* Add margin around the element */
+    font-size: 1.2em; /* Adjust font size if needed */
+}
+
