--- a/assets/css/ashwani.css
+++ b/assets/css/ashwani.css
@@ -12289,14 +12289,16 @@ pre .code {
 
 
 .scrolling-wrapper {
-  overflow: hidden;
+  display: flex;
+  overflow-x: hidden;
   white-space: nowrap;
   width: 100%;
 }
 
 .scrolling-content {
   display: inline-block;
-  animation: scroll 20s linear infinite;
+  margin-right: 10px;
+  animation: scroll 15s linear infinite;
 }
 
 .scrolling-content img {
